cvpi_image_functions.h

typedef union {
  VGuint all;
  VGubyte channel[4];
} cvpi_pixel;
typedef struct {
  double x;
  double y;
} cvpi_precise_coordinate;
typedef struct {
  cvpi_precise_coordinate* coordinates;
  unsigned long length;
} cvpi_precise_coordinate_table;
typedef struct {
  double radius;		
  double theta;
} cvpi_polar_coordinate;
typedef struct {
  cvpi_polar_coordinate* coordinates;
  unsigned long length;
} cvpi_polar_coordinate_table;
/* Given a cvpi_precise_coordinate_table generated by
   cvpi_image_coordinate_table_lens_correct, map the table values to polar
   coordinates. */
cvpi_polar_coordinate_table* cvpi_image_polar_coordinate_table_lens_corrected(const cvpi_precise_coordinate_table *ct);
void cvpi_image_polar_coordinate_table_destroy(cvpi_polar_coordinate_table *ct);
/* Convert a cvpi image from YUVA to RGBA. The conversion is done on
   the CPU. YUVA is the input image and RGBA is the output image. YUVA
   and RGBA must be the same size; at least WIDTH * HEIGHT * 4
   bytes. If YUVA == RGBA, then the conversion is done
   destructively. Use cvpi_bmp_sARGB_8888 if the output is being
   output into a bitmap image.*/
void cvpi_avuy2argb(cvpi_pixel* yuva, cvpi_pixel* rgba, unsigned long width, unsigned long height);
cvpi_pixel* cvpi_image_rgba(const VGImage image);