bindings/chicken/cvpi/cvpi.scm


;; cvpi_polar_coordinate_table* cvpi_image_polar_coordinate_table_lens_corrected(const cvpi_precise_coordinate_table *ct)
(define cvpi_image_polar_coordinate_table_lens_corrected
  (foreign-lambda (c-pointer cvpi_polar_coordinate_table)
		  "cvpi_image_polar_coordinate_table_lens_corrected"
		  (const (c-pointer cvpi_precise_coordinate_table))))

;; void cvpi_image_polar_coordinate_table_destroy(cvpi_polar_coordinate_table *ct)
(define cvpi_image_polar_coordinate_table_destroy
  (foreign-lambda void "cvpi_image_polar_coordinate_table_destroy"
		  (c-pointer cvpi_polar_coordinate_table)))

;; void cvpi_avuy2argb(cvpi_pixel* yuva, cvpi_pixel* rgba, unsigned long width, unsigned long height)
(define cvpi_avuy2argb
  (foreign-lambda void "cvpi_avuy2argb"
		  (c-pointer cvpi_pixel) (c-pointer cvpi_pixel) unsigned-long unsigned-long))

;; cvpi_pixel* cvpi_image_rgba(const VGImage image)
(define cvpi_image_rgba
  (foreign-lambda (c-pointer cvpi_pixel) "cvpi_image_rgba" (const VGImage)))
